[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
homepage = "https://paritytech.github.io/polkadot-sdk/master/polkadot_sdk_docs/index.html"
repository = "https://github.com/paritytech/polkadot-sdk.git"

[workspace]
members = [
    "node",
    "pallets/cortex-vision",
    "runtime",
]


[workspace.lints.rust]
suspicious_double_ref_op = { level = "allow", priority = 2 }

[profile.release]
panic = "unwind"

[workspace.dependencies]
polkavm = "0.9.3"
polkavm-linker = "0.9.2"
polkavm-derive = "0.9.1"
log = { version = "0.4.21", default-features = false }
quote = { version = "1.0.33" }
serde = { version = "1.0.197", default-features = false }
serde-big-array = { version = "0.3.2" }
serde_derive = { version = "1.0.117" }
serde_json = { version = "1.0.114", default-features = false }
serde_yaml = { version = "0.9" }
syn = { version = "2.0.53" }
thiserror = { version = "1.0.48" }
tracing-subscriber = { version = "0.3.18" }